kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__list_recovery_4.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 9
expression: "crate::tests::parsing_expr_string(\"[[0,1\")"
---
Node {
    node: List(
        ListExpr {
            elts: [
                Node {
                    node: List(
                        ListExpr {
                            elts: [
                                Node {
                                    node: NumberLit(
                                        NumberLit {
                                            binary_suffix: None,
                                            value: Int(
                                                0,
                                            ),
                                        },
                                    ),
                                    filename: "",
                                    line: 1,
                                    column: 2,
                                    end_line: 1,
                                    end_column: 3,
                                },
                                Node {
                                    node: NumberLit(
                                        NumberLit {
                                            binary_suffix: None,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    filename: "",
                                    line: 1,
                                    column: 4,
                                    end_line: 1,
                                    end_column: 5,
                                },
                            ],
                            ctx: Load,
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 5,
                },
            ],
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 5,
}

