kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__number_literal_recovery_2.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 12
expression: "crate::tests::parsing_expr_string(\"0x112.3\")"
---
Node {
    node: NumberLit(
        NumberLit {
            binary_suffix: None,
            value: Float(
                0.0,
            ),
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 7,
}

